2009-01-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-fix-before-sending): Add `eight-bit' to
	illegible-text check.

2009-01-01  Dave Love  <fx@gnu.org>

	* imap.el (imap-string-to-integer): Fix typo.
	(imap-fetch-safe): New function.
	(imap-message-copyuid-1, imap-message-appenduid-1): Use it.

	* nnimap.el (nnimap-find-minmax-uid): Use imap-fetch-safe.

	* imap.el (imap-process-connection-type, imap-debug, imap-open):
	(imap-parse-greeting): Fix doc strings.
	(imap-tls-open, imap-search, imap-message-appenduid-1): Add FIXMEs.
	(imap-parse-flag-list): Make messages unique.
	(imap-parse-body): Fix comments.  Add comment on Exchange 2007.

	* nnimap.el: Fix author email.
	(nnimap-split-rule): Add FIXME comment.
	(nnimap-debug): Fix doc string.

2008-12-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* dns.el (dns-set-servers): Check "Address".  Fix typo.

2008-12-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* dns.el (dns-set-servers): Renamed from dns-parse-resolv-conf.  Call
	nslookup if resolv.conf isn't available.
	(dns-query): Rename from query-dns.
	(dns-query-cached): Rename from query-dns-cached.

2008-12-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-set-article-display-arrow): Make
	overlay-arrow-position and overlay-arrow-string buffer-local; no need
	to check if those variables exist (first appeared in Emacs 18.50).

2008-12-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-line-number-at-pos): New function.

	* spam-report.el (spam-report-process-queue): Use it.

2008-12-24  David Engster  <dengste@eml.cc>

	* gnus-sum.el (gnus-summary-set-local-parameters): Don't bind
	parameters that haven't existed as variables as buffer-local variables.

2008-12-23  Dave Love  <fx@gnu.org>

	* legacy-gnus-agent.el (gnus-agent-unlist-expire-days): Don't use
	cadar.

	* sieve-manage.el (sieve-manage-starttls-p): Renamed from
	imap-starttls-p.
	(sieve-manage-starttls-open): Renamed from imap-starttls-open.
